[package]
name = "humantime"
description = "    A parser and formatter for std::time::{Duration, SystemTime}\n"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = [ "time", "human", "human-friendly", "parser", "duration",]
homepage = "https://github.com/tailhook/humantime"
repository = "https://github.com/tailhook/humantime"
documentation = "https://docs.rs/humantime"
version = "2.1.0"
edition = "2018"
authors = [ "Paul Colomiets <paul@colomiets.name>",]
categories = [ "date-and-time",]

[lib]
name = "humantime"
path = "src/lib.rs"

[dev-dependencies]
time = "0.1"
chrono = "0.4"
rand = "0.6"

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1
